.kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
  creationTimestamp: "2024-02-29T13:58:27Z"
  generation: 10
  labels:
    app: tic-tac-toe
  name: tic-tac-toe
  namespace: gruppe-gaming
  resourceVersion: "25888"
  uid: 72dc8ac8-044b-4872-ae01-c376a6e8ab48
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: tic-tac-toe
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: tic-tac-toe
    spec:
      containers:
      - image: ghcr.io/ci-cd-2024-dhbw-hdh/gruppe-gaming:main
        imagePullPolicy: IfNotPresent
        name: gruppe-gaming
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: regcred
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 3
  conditions:
  - lastTransitionTime: "2024-02-29T13:58:27Z"
    lastUpdateTime: "2024-02-29T14:00:28Z"
    message: ReplicaSet "tic-tac-toe-868575997d" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2024-02-29T14:20:27Z"
    lastUpdateTime: "2024-02-29T14:20:27Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 10
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
