.kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2024-02-29T14:03:13Z"
  labels:
    app: tic-tac-toe
  name: tic-tac-toe
  namespace: default
  resourceVersion: "12028"
  uid: c4083d46-335e-484f-9078-878c584b6298
spec:
  clusterIP: 10.104.231.47
  clusterIPs:
  - 10.104.231.47
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-80
    nodePort: 32689
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: tic-tac-toe
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
